[package]
name = "nodep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
libc = "0.2.153"
nu-ansi-term = "0.50.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
